--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <!-- <h2 style="font-size: 33px; color: blueviolet;"></h2>
         <h2 style="font-size: 30px; color: brown;"></h2> -->
         
-         <img src="trial_2.jpg" alt="profile photo" id="image_1 " style="max-width: 60%;height: auto;">
+         <img src="my_profile.jpg" alt="profile photo" id="image_1 " style="max-width: 40%;height: auto; margin-left: 100px;">
     </div>
       
     <div class="container2">
