--- a/about.html
+++ b/about.html
@@ -114,14 +114,17 @@
         @media screen and (max-width:1054px){.container1{
             margin-left: 1vw;
             width: 90%;
+            height: 600px;
         }
        .container2{
             margin-left: 1vw;
             width: 90%;
+           height: 600px;
         }
         .container3{
             margin-left: 1vw;
             width: 90%;
+            height: 600px;
         }
         }
 </style>
